syntax = "proto3";

package member;
option go_package = "./services";

enum MemberSexEnum {
  SEX_UNKNOWN = 0;
  SEX_BOY = 1;
  SEX_GIRL = 2;
}

service MemberService {
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc GetUserList(GetUserListRequest) returns (GetUserListResponse);
}

message Member {
  int64         id   = 1;
  string        name = 2;
  int64         age  = 3;
  MemberSexEnum sex  = 4;
}

message GetUserInfoRequest {
  int64 id = 1;
}

message GetUserInfoResponse {
  int64  code = 1;
  string err  = 2;
  Member info = 3;
}

message GetUserListRequest {
  string keyword = 1;
  int64  page    = 2;
  int64  size    = 3;
  int64  type    = 4;
}

message GetUserListResponse {
  int64           code = 1;
  string          err  = 2;
  repeated Member data = 3;
}